# uv-python-project-template

./: .dockerignore  .editorconfig  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yaml
.github/codeql/: codeql-config.yaml
.github/workflows/: build-and-push-image.yaml  code-quality.yaml  codeql-analysis.yaml  deploy-to-cloud-run.yaml  integration-test.yaml  labels.yaml  lint-and-type-check.yaml  paths-filter.yaml  promote-image.yaml  unit-tests.yaml
docs/: INFRASTRUCTURE.md
requirements/: requirements-lint.txt  requirements-test.py3.14-test.txt
scripts/: bump-version.sh
src/python_project_template/: logging.conf  main.py
src/python_project_template/utils/: utils.py
src/uv_python_project_template/: main.py
src/uv_python_project_template/utils/: utils.py
tests/: test_main.py  test_utils.py
