####################
# Project Metadata #
####################

[project]
authors = [{ name = "Henrik Holm", email = "no-reply@email.com" }]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
description = "Python template project using the Hatch project manager."
dynamic = ["version"]
license = { file = "LICENSE" }
name = "python-project-template"
readme = "README.md"
requires-python = ">=3.14"

[project.urls]
Documentation = "https://github.com/h-holm/python-project-template"
Source = "https://github.com/h-holm/python-project-template"

#########
# Hatch #
#########

[tool.hatch]
metadata.allow-direct-references = true

[tool.hatch.env]
requires = [
  "hatch-pip-compile~=1.11.5",
]

[tool.hatch.version]
path = "src/python_project_template/__version__.py"
raw-options = { version_scheme = "no-guess-dev" }

######################
# Hatch Environments #
######################

# "Base" env to ensure the same Python version is used across all Hatch envs. Note that this env is not supposed to be
# used directly, but rather as a template for other envs.
[tool.hatch.envs.base]
python = "3.14"
# Skip (local) installation of the project itself. This assumes the project is not supposed to be packaged.
skip-install = true
template = "base"

[tool.hatch.envs.base.scripts]
upgrade-all = "PIP_COMPILE_UPGRADE=1 hatch env run --env {env_name} -- python --version"
upgrade-pkg = "PIP_COMPILE_UPGRADE_PACKAGE='{args}' hatch env run --env {env_name} -- python --version"

#######################
# Default Environment #
#######################

# Default environment used by Hatch if no other env is explicitly specified.
[tool.hatch.envs.default]
dependencies = [
  "typer~=0.20.0",
  "tabulate~=0.9.0",
]
installer = "uv"
pip-compile-constraint = "default" # Keep locks between default and other environments consistent.
pip-compile-hashes = true
pip-compile-resolver = "uv"
pip-compile-installer = "uv"
template = "base"
type = "pip-compile"

####################
# Test Environment #
####################

[tool.hatch.envs.test]
# Use `extra-dependencies` to inherit and extend upon the dependencies of the default env.
extra-dependencies = [
  "pytest~=9.0.2",
  "pytest-asyncio~=1.3.0",
  "pytest-cov~=7.0.0",
  "pytest-mock~=3.15.1",
]

[tool.hatch.envs.test.scripts]
debug = "python -m pytest --pdb"
test = "python -m pytest --verbose --cov-report=term-missing --cov=src/python_project_template {args}"
no-cov = "test --no-cov {args}"
cov-xml = "test --cov-report=xml"

# By leveraging the Hatch matrix feature we can test against multiple Python versions.
[[tool.hatch.envs.test.matrix]]
template = ["test"]
python = ["3.14"]

####################
# Lint Environment #
####################

[tool.hatch.envs.lint]
extra-dependencies = [
  "mypy~=1.19.0",
  "pip~=25.3",  # To enable `mypy` to `pip install` stubs.
  "pre-commit~=4.5.0",
  "pydantic~=2.12.5",
  "pydantic-core~=2.41.5",
  "pytest~=9.0.1",
  "ruff~=0.14.9",
]

[tool.hatch.envs.lint.scripts]
# Check the code style and formatting.
style = [
  "echo \"VERSION: `python -m ruff --version`\"",
  "python -m ruff check {args:.}",
  "python -m ruff format --check {args:.}",
]
# Fix code style and formatting issues where possible.
# Run `style` at the end to generate feedback on non-fixable issues.
fix = [
  "python -m ruff format {args:.}",
  "python -m ruff check --fix {args:.}",
  "style",
]
# Perform static type checking.
typing = [
  "echo \"VERSION: `python -m mypy --version`\"",
  "python -m mypy --install-types --non-interactive {args}",
]
# For use as a `pre-commit` hook, define a simpler `typing` script that (1) ignores missing imports
# and (2) does not `--install-types`.
simple-typing = [
  "echo \"VERSION: `python -m mypy --version`\"",
  "python -m mypy --ignore-missing-imports {args}",
]
# Define a `lint` script that runs full-scale style, formatting and type checks ...
lint = [
  "style",
  "typing",
]
# Set up and run `pre-commit` hooks. Run the `lint` script to ensure any necessary library stubs are installed.
hooks = [
  "python -m pre_commit install",
  "typing",
  "python -m pre_commit",
]

##################
# External Tools #
##################

[tool.coverage.paths]
source = ["src/python_project_template"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
skip_empty = true

[tool.coverage.run]
branch = true
omit = ["src/python_project_template/__version__.py", "tests/*"]
relative_files = true
source = ["src/python_project_template"]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_unimported = true
files = ["src/python_project_template", "tests"]
# Set to "silent" to not follow.
follow_imports = "normal"
no_implicit_optional = true
plugins = ["pydantic.mypy"]
pretty = true
show_column_numbers = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "--cov=src/python_project_template --cov-report=term-missing --doctest-glob='*.md'"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "strict"
minversion = "9.0.1"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
exclude = ["src/python_project_template/__version__.py"]
indent-width = 4
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",  # "May cause conflicts when used with the formatter".
  "CPY001",  # Requires copyright notices at the top of files.
  "D203",    # If enabled, this requires one blank line before Class docstrings. Conflicts with D211.
  "D213",    # Conflicts with D212.
  "ISC001",  # Causes unexpected behaviour with formatter.
  "G004",    # Disallows f-strings in logging statements.
  "PLC1901", # Disallows comparing to the empty string ("").
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["python_project_template"]
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"tests/**/*" = [
  # Tests can use magic values, assertions, and relative imports.
  "PLR2004",
  "S101",
  "TID252",
  # Tests can skip docstrings.
  "D100",
  "D103",
  # Allow boolean-typed positional arguments in test function definitions.
  "FBT001",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
