####################
# Project Metadata #
####################

[project]
authors = [{ name = "Henrik Holm", email = "no-reply@email.com" }]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "loguru>=0.7.3",
  "tabulate==0.9.0",
  "typer==0.20.1",
]
description = "Python template project using the `uv` project manager."
license = { file = "LICENSE" }
name = "uv-python-project-template"
readme = "README.md"
requires-python = ">=3.14"
version = "0.1.0"

[project.urls]
Documentation = "https://github.com/h-holm/uv-python-project-template"
Source = "https://github.com/h-holm/uv-python-project-template"

#####################
# Dependency Groups #
#####################

[dependency-groups]
test = [
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.0.0",
]
lint = [
  "mypy==1.19.1",
  "pydantic==2.12.5",
  "ruff==0.14.10",
  "types-tabulate==0.9.0.20241207",
  { include-group = "test" },
]
pre = [
  "pre-commit==4.5.1",
  { include-group = "lint" },
]

#######################
# Tool Configurations #
#######################

[tool.coverage.paths]
source = ["src/uv_python_project_template"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
skip_empty = true

[tool.coverage.run]
branch = true
relative_files = true
source = ["src/uv_python_project_template"]

# In the `mypy` config below, `strict = true` is used. This enables many of the optional error-checking flags, but not
# all. Moreover, the subset of flags that are enabled by `strict = true` can change between `mypy` versions. For
# these reasons, to ensure strictness and consistent behavior across `mypy` versions, all desired error-checking flags
# are _explicitly_ set to `true` here below, despite the redundancy this creates.
[tool.mypy]
check_untyped_defs = true
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_expr = false
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
extra_checks = true
no_implicit_reexport = true
plugins = ["pydantic.mypy"]
pretty = true
show_column_numbers = true
show_error_code_links = true
show_error_codes = true
show_error_context = true
strict = true
strict_bytes = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
addopts = "--cov=src/uv_python_project_template --cov-report=term-missing --cov-fail-under=80 --doctest-glob='*.md'"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "strict"
minversion = "9.0.2"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
indent-width = 4
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812", # "May cause conflicts when used with the formatter".
  "CPY001", # Requires copyright notices at the top of files.
  "D203",   # If enabled, this requires one blank line before Class docstrings. Conflicts with D211.
  "D213",   # Conflicts with D212.
  "G004",   # Disallows f-strings in logging statements.
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["uv_python_project_template"]
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"tests/**/*" = [
  # Tests can use magic values, assertions, and relative imports.
  "PLR2004",
  "S101",
  "TID252",
  # Tests can skip docstrings.
  "D100",
  "D103",
  # Allow boolean-typed positional arguments in test function definitions.
  "FBT001",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
