####################
# Project Metadata #
####################

[project]
authors = [{ name = "Henrik Holm", email = "no-reply@email.com" }]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "loguru>=0.7.3",
  "tabulate==0.9.0",
  "typer==0.20.1",
]
description = "Python template project using the `uv` project manager."
license = { file = "LICENSE" }
name = "uv-python-project-template"
readme = "README.md"
requires-python = ">=3.14"
version = "0.1.2"

[project.urls]
Documentation = "https://github.com/h-holm/uv-python-project-template"
Source = "https://github.com/h-holm/uv-python-project-template"

#####################
# Dependency Groups #
#####################

[dependency-groups]
test = [
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.0.0",
]
lint = [
  "pydantic==2.12.5",
  "ruff==0.14.10",
  "ty==0.0.7",
  { include-group = "test" },
]
pre = [
  "pre-commit==4.5.1",
  { include-group = "lint" },
]

#######################
# Tool Configurations #
#######################

[tool.coverage.paths]
source = ["src/uv_python_project_template"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
skip_empty = true

[tool.coverage.run]
branch = true
relative_files = true
source = ["src/uv_python_project_template"]

[tool.pytest.ini_options]
addopts = "--cov=src/uv_python_project_template --cov-report=term-missing --cov-fail-under=80 --doctest-glob='*.md'"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "strict"
minversion = "9.0.2"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
indent-width = 4
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812", # "May cause conflicts when used with the formatter".
  "CPY001", # Requires copyright notices at the top of files.
  "D203",   # If enabled, this requires one blank line before Class docstrings. Conflicts with D211.
  "D213",   # Conflicts with D212.
  "G004",   # Disallows f-strings in logging statements.
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["uv_python_project_template"]
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"tests/**/*" = [
  # Tests can use magic values, assertions, and relative imports.
  "PLR2004",
  "S101",
  "TID252",
  # Tests can skip docstrings.
  "D100",
  "D103",
  # Allow boolean-typed positional arguments in test function definitions.
  "FBT001",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
